--- a/Cleaning_data.ipynb
+++ b/Cleaning_data.ipynb
@@ -459,7 +459,7 @@
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
-      "  sns.barplot(data=launches_by_organitzation, x='Successful_Launches', y='Organisation', palette='viridis')\n"
+      "  sns.barplot(data=launches_by_organitzation, x='Successful_Launches', y='Organisation')\n"
      ]
     },
     {
