--- a/Cleaning_data.ipynb
+++ b/Cleaning_data.ipynb
@@ -786,7 +786,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cabe recalcar que hay años que faltan datos, però en general las conclusiones serian las siguientes:\n",
+    "Cabe recalcar que hay años que faltan datos, pero en general las conclusiones serían las siguientes:\n",
     "\n",
     "- Antes de 1970: Los costos eran relativamente bajos debido a la tecnología limitada y los objetivos más modestos.\n",
     "\n",
