--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En este proyecto limpiaremos datos del dataset de Kaggle Space Mission Launches mediante Excel, una vez tengamos el dataset limpio empezaremos ha hacer el análisis. El objetivo es extraer conclusiones sobre la evolucion de las misiones espaciales y como ciertas épocas han influido en su avance y mejora de los resultados de los lanzamientos espaciales. Finalmente subiremos los datos a una BBDD, en este caso MYSQL Server."
+    "En este proyecto limpiaremos datos del dataset de Kaggle Space Mission Launches mediante Excel, una vez tengamos el dataset limpio empezaremos a hacer el análisis. El objetivo es extraer conclusiones sobre la evolución de las misiones espaciales y como ciertas épocas han influido en su avance y mejora de los resultados de los lanzamientos espaciales. Finalmente, subiremos los datos a una BBDD, en este caso MYSQL Server."
    ]
   },
   {
